Fix Dropdown spacing for small screens

--- a/plugin/src/components/DevnetAccountSelector/devnetAccountSelector.css
+++ b/plugin/src/components/DevnetAccountSelector/devnetAccountSelector.css
@@ -36,11 +36,12 @@
 
 .devnet-account-item {
   position: relative;
+  padding: 4px 0;
 }
 
 .selected-account {
   position: absolute;
-  top: -2px;
+  top: 2px;
   left: -10px;
 }
 
