--- a/plugin/src/ui_components/Dropdown/dropdown.css
+++ b/plugin/src/ui_components/Dropdown/dropdown.css
@@ -45,7 +45,7 @@ button {
   border-radius: 3px;
   display: flex;
   align-items: center;
-  height: 25px;
+  min-height: 25px;
   padding: 0 5px;
   position: relative;
   user-select: none;
